Fix: directories all steps

--- a/.github/workflows/multiregion.yml
+++ b/.github/workflows/multiregion.yml
@@ -270,19 +270,19 @@ jobs:
 
             - name: Tree Repository
               run: tree .
-              working-directory: ./deployment/environment
+              working-directory: ./deployment/
               
             - name: Terraform Init
-              run: terraform init -backend-config=./us-east-1/backend.tfvars
-              working-directory: ./deployment/environment
+              run: terraform init -backend-config=environment/us-east-1/backend.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
                 AWS_REGION: "us-east-1"
 
             - name: Terraform Apply
-              run: terraform apply --auto-approve -var-file=./us-east-1/terraform.tfvars
-              working-directory: ./deployment/environment
+              run: terraform apply --auto-approve -var-file=environment/us-east-1/terraform.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
@@ -304,19 +304,19 @@ jobs:
 
             - name: Tree Repository
               run: tree .
-              working-directory: ./deployment/environment
+              working-directory: ./deployment/
               
             - name: Terraform Init
-              run: terraform init -backend-config=./sa-east-1/backend.tfvars
-              working-directory: ./deployment/environment
+              run: terraform init -backend-config=environment/sa-east-1/backend.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
                 AWS_REGION: "sa-east-1"
 
             - name: Terraform Plan
-              run: terraform plan -var-file=./sa-east-1/terraform.tfvars
-              working-directory: ./deployment/environment
+              run: terraform plan -var-file=environment/sa-east-1/terraform.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
@@ -337,19 +337,19 @@ jobs:
 
             - name: Tree Repository
               run: tree .
-              working-directory: ./deployment/environment
+              working-directory: ./deployment/
               
             - name: Terraform Init
-              run: terraform init -backend-config=./sa-east-1/backend.tfvars
-              working-directory: ./deployment/environment
+              run: terraform init -backend-config=environment/sa-east-1/backend.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
                 AWS_REGION: "sa-east-1"
 
             - name: Terraform Apply
-              run: terraform apply --auto-approve -var-file=./sa-east-1/terraform.tfvars
-              working-directory: ./deployment/environment
+              run: terraform apply --auto-approve -var-file=environment/sa-east-1/terraform.tfvars
+              working-directory: ./deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
@@ -370,19 +370,19 @@ jobs:
 
             - name: Tree Repository
               run: tree .
-              working-directory: ./post-deployment
+              working-directory: ./post-deployment/
               
             - name: Terraform Init
-              run: terraform init -backend-config=./environment/backend.tfvars
-              working-directory: ./post-deployment
+              run: terraform init -backend-config=environment/backend.tfvars
+              working-directory: ./post-deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
                 AWS_REGION: "us-east-1"
 
             - name: Terraform Plan
-              run: terraform plan -var-file=./environment/terraform.tfvars
-              working-directory: ./post-deployment
+              run: terraform plan -var-file=environment/terraform.tfvars
+              working-directory: ./post-deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
@@ -406,16 +406,16 @@ jobs:
               working-directory: ./post-deployment
               
             - name: Terraform Init
-              run: terraform init -backend-config=./environment/backend.tfvars
-              working-directory: ./post-deployment
+              run: terraform init -backend-config=environment/backend.tfvars
+              working-directory: ./post-deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
                 AWS_REGION: "us-east-1"
 
             - name: Terraform Apply
-              run: terraform apply --auto-approve -var-file=./environment/terraform.tfvars
-              working-directory: ./post-deployment
+              run: terraform apply --auto-approve -var-file=environment/terraform.tfvars
+              working-directory: ./post-deployment/
               env:
                 AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID  }}
                 AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY  }}
